k8s_yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: learnk8s-service
spec:
  selector:
    app: learnk8sapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
  type: NodePort
